--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1080,6 +1080,7 @@ body {
 
         #skillsAndExpertise {
             width: 100%;
+            margin-bottom: 40px;
             box-shadow: none;
 
             // Flex Attributes
@@ -1243,7 +1244,7 @@ body {
 
                             h1 {
                                 color: $green;
-                                font-size: 30px;
+                                font-size: 26px;
                             }
                         }
 
