--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Mitr:400,600&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -77,6 +78,38 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+#overlay {
+  position: fixed;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: -webkit-gradient(linear, left top, right bottom, from(#0F0F0F), to(#232323));
+  background: linear-gradient(to bottom right, #0F0F0F, #232323);
+  -webkit-transition: 1s 0.4s;
+  transition: 1s 0.4s;
+}
+
+#progress {
+  height: 1px;
+  background: #c8c8c8;
+  position: absolute;
+  width: 0;
+  top: 50%;
+}
+
+#progstat {
+  font-size: 0.8em;
+  color: #c8c8c8;
+  letter-spacing: 2px;
+  position: absolute;
+  top: 50%;
+  margin-top: -40px;
+  width: 100%;
+  text-align: center;
 }
 
 body {
@@ -702,7 +735,7 @@ body #myWork #projects .project:hover a .cont .type {
 body #about {
   width: 100%;
   height: 100%;
-  padding: 60px 50px 50px 105px;
+  padding: 60px 50px 50px 115px;
   background: #1A1A1ABB;
   position: relative;
   overflow-y: auto;
@@ -1945,7 +1978,24 @@ body #about #featuredWork .project {
   border-radius: 5px;
   -webkit-box-shadow: 0px 2px 10px -3px rgba(0, 0, 0, 0.7);
           box-shadow: 0px 2px 10px -3px rgba(0, 0, 0, 0.7);
-  padding: 40px;
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 body #about #featuredWork #main {
@@ -1954,6 +2004,234 @@ body #about #featuredWork #main {
       -ms-flex: 50%;
           flex: 50%;
   margin-right: 20px;
+}
+
+body #about #featuredWork #main .bg {
+  width: 100%;
+}
+
+body #about #featuredWork #main .type {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: #232323;
+  font-weight: 500;
+  z-index: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #main .type i {
+  color: #232323;
+  font-size: 16px;
+  width: 35px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #main .year {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 35px;
+  padding: 0 10px;
+  font-weight: 600;
+  color: #232323;
+  z-index: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #main .name {
+  position: absolute;
+  bottom: 30px;
+  right: 40px;
+  font-family: 'Mitr', sans-serif;
+  color: #fafafa;
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 0.9em;
+  z-index: 0;
+}
+
+body #about #featuredWork #main .prev {
+  position: absolute;
+  height: 80%;
+  top: 10%;
+  left: 10%;
+  z-index: 0;
+}
+
+body #about #featuredWork #main .overlay {
+  position: absolute;
+  top: -5%;
+  left: -5%;
+  width: 110%;
+  height: 110%;
+  z-index: -1;
+  opacity: 0;
+  background: radial-gradient(#0F0F0F, #232323);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #main .overlay i {
+  font-size: 17px;
+  margin-right: 15px;
+  color: #c8c8c8;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+body #about #featuredWork #main .overlay span {
+  font-size: 16px;
+  color: #c8c8c8;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+body #about #featuredWork #main .links {
+  position: absolute;
+  top: 65%;
+  z-index: -1;
+  opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #main .links a {
+  margin-right: 15px;
+}
+
+body #about #featuredWork #main .links a i {
+  color: #c8c8c8;
+  background: #232323;
+  width: 45px;
+  height: 45px;
+  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #main .links a:last-child {
+  margin: 0;
+}
+
+body #about #featuredWork #main .links a:hover i {
+  color: #8DFFAA;
+  background: #0F0F0F;
+}
+
+body #about #featuredWork #main:hover .type {
+  z-index: 99;
+  color: #c8c8c8;
+}
+
+body #about #featuredWork #main:hover .type i {
+  color: #c8c8c8;
+}
+
+body #about #featuredWork #main:hover .year {
+  z-index: 99;
+  color: #c8c8c8;
+}
+
+body #about #featuredWork #main:hover .prev {
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  -webkit-transform: scale(1.06);
+          transform: scale(1.06);
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+}
+
+body #about #featuredWork #main:hover .overlay {
+  z-index: 98;
+  opacity: 0.9;
+}
+
+body #about #featuredWork #main:hover .links {
+  z-index: 99;
+  opacity: 1;
 }
 
 body #about #featuredWork #secundary {
@@ -1977,6 +2255,234 @@ body #about #featuredWork #secundary {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+body #about #featuredWork #secundary .project .bg {
+  width: 100%;
+  height: 100%;
+}
+
+body #about #featuredWork #secundary .project .type {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: #232323;
+  font-weight: 500;
+  z-index: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #secundary .project .type i {
+  color: #232323;
+  font-size: 16px;
+  width: 35px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #secundary .project .year {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 35px;
+  padding: 0 10px;
+  font-weight: 600;
+  color: #232323;
+  z-index: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #secundary .project .name {
+  position: absolute;
+  bottom: 30px;
+  left: 40px;
+  font-size: 32px;
+  line-height: 0.9em;
+  font-weight: 600;
+  z-index: 0;
+  color: #232323;
+}
+
+body #about #featuredWork #secundary .project .prev {
+  position: absolute;
+  height: 80%;
+  top: 10%;
+  right: 10%;
+  z-index: 0;
+}
+
+body #about #featuredWork #secundary .project .overlay {
+  position: absolute;
+  top: -5%;
+  left: -5%;
+  width: 110%;
+  height: 110%;
+  z-index: -1;
+  opacity: 0;
+  background: radial-gradient(#0F0F0F, #232323);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #secundary .project .overlay i {
+  font-size: 17px;
+  margin-right: 15px;
+  color: #c8c8c8;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+body #about #featuredWork #secundary .project .overlay span {
+  font-size: 16px;
+  color: #c8c8c8;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+
+body #about #featuredWork #secundary .project .links {
+  position: absolute;
+  top: 65%;
+  z-index: -1;
+  opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #secundary .project .links a {
+  margin-right: 15px;
+}
+
+body #about #featuredWork #secundary .project .links a i {
+  color: #c8c8c8;
+  background: #232323;
+  width: 45px;
+  height: 45px;
+  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #about #featuredWork #secundary .project .links a:last-child {
+  margin: 0;
+}
+
+body #about #featuredWork #secundary .project .links a:hover i {
+  color: #8DFFAA;
+  background: #0F0F0F;
+}
+
+body #about #featuredWork #secundary .project:hover .type {
+  z-index: 99;
+  color: #c8c8c8;
+}
+
+body #about #featuredWork #secundary .project:hover .type i {
+  color: #c8c8c8;
+}
+
+body #about #featuredWork #secundary .project:hover .year {
+  z-index: 99;
+  color: #c8c8c8;
+}
+
+body #about #featuredWork #secundary .project:hover .prev {
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  -webkit-transform: scale(1.06);
+          transform: scale(1.06);
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+}
+
+body #about #featuredWork #secundary .project:hover .overlay {
+  z-index: 98;
+  opacity: 0.9;
+}
+
+body #about #featuredWork #secundary .project:hover .links {
+  z-index: 99;
+  opacity: 1;
 }
 
 body #about #featuredWork #secundary #projectTwo {
