--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Mitr:400,600&display=swap');
 
 $black: #0F0F0F;
 $darkerBlack: #0C0C0C;
@@ -77,6 +78,36 @@ li {
     justify-content: center;
     align-content: center;
     align-items: center;
+}
+
+#overlay {
+    position: fixed;
+    z-index: 99999;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(to bottom right, $black, $darkGray);
+    transition: 1s 0.4s;
+}
+
+#progress {
+    height: 1px;
+    background: $lightGray;
+    position: absolute;
+    width: 0;
+    top: 50%;
+}
+
+#progstat {
+    font-size: 0.8em;
+    color: $lightGray;
+    letter-spacing: 2px;
+    position: absolute;
+    top: 50%;
+    margin-top: -40px;
+    width: 100%;
+    text-align: center;
 }
 
 body {
@@ -567,7 +598,7 @@ body {
     #about {
         width: 100%;
         height: 100%;
-        padding: 60px 50px 50px 105px;
+        padding: 60px 50px 50px 115px;
         background: $blackOpacity;
         position: relative;
         overflow-y: auto;
@@ -1503,13 +1534,204 @@ body {
                 background: $darkerBlack;
                 border-radius: 5px;
                 box-shadow: 0px 2px 10px -3px $shadow;
-                padding: 40px;
+                overflow: hidden;
+                position: relative;
+                z-index: 0;
+
+                // Flex Attributes
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-content: center;
+                align-items: center;
             }
 
             #main {
                 height: 100%;
                 flex: 50%;
                 margin-right: 20px;
+
+
+                .bg {
+                    width: 100%;
+                }
+
+                .type {
+                    position: absolute;
+                    top: 20px;
+                    left: 20px;
+                    color: $darkGray;
+                    font-weight: 500;
+                    z-index: 0;
+
+                    // Flex Attributes
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-content: center;
+                    align-items: center;
+
+                    i {
+                        color: $darkGray;
+                        //margin-right: 10px;
+                        font-size: 16px;
+                        width: 35px;
+                        height: 35px;
+
+                        // Flex Attributes
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-content: center;
+                        align-items: center;
+                    }
+                }
+
+                .year {
+                    position: absolute;
+                    top: 20px;
+                    right: 20px;
+                    height: 35px;
+                    padding: 0 10px;
+                    font-weight: 600;
+                    color: $darkGray;
+                    z-index: 0;
+
+                    // Flex Attributes
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-content: center;
+                    align-items: center;
+                }
+
+                .name {
+                    position: absolute;
+                    bottom: 30px;
+                    right: 40px;
+                    font-family: 'Mitr', sans-serif;
+                    color: $white;
+                    font-size: 48px;
+                    font-weight: 600;
+                    line-height: 0.9em;
+                    z-index: 0;
+                }
+
+                .prev {
+                    position: absolute;
+                    height: 80%;
+                    top: 10%;
+                    left: 10%;
+                    z-index: 0;
+                }
+
+                .overlay {
+                    position: absolute;
+                    top: -5%;
+                    left: -5%;
+                    width: 110%;
+                    height: 110%;
+                    z-index: -1;
+                    opacity: 0;
+                    background: radial-gradient($black, $darkGray);
+
+                    // Flex Attributes
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-content: center;
+                    align-items: center;
+
+                    i {
+                        font-size: 17px;
+                        margin-right: 15px;
+                        color: $lightGray;
+                        transition-delay: 0.2s;
+                    }
+
+                    span {
+                        font-size: 16px;
+                        color: $lightGray;
+                        transition-delay: 0.2s;
+                    }
+
+                }
+
+                .links {
+                    position: absolute;
+                    top: 65%;
+                    z-index: -1;
+                    opacity: 0;
+
+                    // Flex Attributes
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-content: center;
+                    align-items: center;
+
+                    a {
+                        margin-right: 15px;
+
+                        i {
+                            color: $lightGray;
+                            background: $darkGray;
+                            width: 45px;
+                            height: 45px;
+                            font-size: 20px;
+
+                            // Flex Attributes
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: center;
+                            align-content: center;
+                            align-items: center;
+                        }
+                        
+                        &:last-child {
+                            margin: 0;
+                        }
+
+                        &:hover {
+                            i {
+                                color: $green;
+                                background: $black;
+                            }
+                        }
+                    }
+                }
+
+                &:hover {
+                    .type {
+                        z-index: 99;
+                        color: $lightGray;
+
+                        i {
+                            color: $lightGray;
+                        }
+                    }
+
+                    .year {
+                        z-index: 99;
+                        color: $lightGray;
+                    }
+
+                    .prev {
+                        transform-origin: center;
+                        transform: scale(1.06);
+                        transition-duration: 0.4s;
+                    }
+
+                    .overlay {
+                        z-index: 98;
+                        opacity: 0.9;
+                    }
+
+                    .links {
+                        z-index: 99;
+                        opacity: 1;
+                    }
+                }
             }
 
             #secundary {
@@ -1523,6 +1745,191 @@ body {
                 justify-content: flex-start;
                 align-content: center;
                 align-items: center;
+
+                .project {
+                    
+
+                    .bg {
+                        width: 100%;
+                        height: 100%;
+                    }
+
+                    .type {
+                        position: absolute;
+                        top: 20px;
+                        left: 20px;
+                        color: $darkGray;
+                        font-weight: 500;
+                        z-index: 0;
+
+                        // Flex Attributes
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-content: center;
+                        align-items: center;
+
+                        i {
+                            color: $darkGray;
+                            //margin-right: 10px;
+                            font-size: 16px;
+                            width: 35px;
+                            height: 35px;
+
+                            // Flex Attributes
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: center;
+                            align-content: center;
+                            align-items: center;
+                        }
+                    }
+
+                    .year {
+                        position: absolute;
+                        top: 20px;
+                        right: 20px;
+                        height: 35px;
+                        padding: 0 10px;
+                        font-weight: 600;
+                        color: $darkGray;
+                        z-index: 0;
+
+                        // Flex Attributes
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-content: center;
+                        align-items: center;
+                    }
+
+                    .name {
+                        position: absolute;
+                        bottom: 30px;
+                        left: 40px;
+                        font-size: 32px;
+                        line-height: 0.9em;
+                        font-weight: 600;
+                        z-index: 0;
+                        color: $darkGray;
+                    }
+
+                    .prev {
+                        position: absolute;
+                        height: 80%;
+                        top: 10%;
+                        right: 10%;
+                        z-index: 0;
+                    }
+
+                    .overlay {
+                        position: absolute;
+                        top: -5%;
+                        left: -5%;
+                        width: 110%;
+                        height: 110%;
+                        z-index: -1;
+                        opacity: 0;
+                        background: radial-gradient($black, $darkGray);
+
+                        // Flex Attributes
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-content: center;
+                        align-items: center;
+
+                        i {
+                            font-size: 17px;
+                            margin-right: 15px;
+                            color: $lightGray;
+                            transition-delay: 0.2s;
+                        }
+
+                        span {
+                            font-size: 16px;
+                            color: $lightGray;
+                            transition-delay: 0.2s;
+                        }
+
+                    }
+
+                    .links {
+                    position: absolute;
+                    top: 65%;
+                    z-index: -1;
+                    opacity: 0;
+
+                    // Flex Attributes
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-content: center;
+                    align-items: center;
+
+                    a {
+                        margin-right: 15px;
+
+                        i {
+                            color: $lightGray;
+                            background: $darkGray;
+                            width: 45px;
+                            height: 45px;
+                            font-size: 20px;
+
+                            // Flex Attributes
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: center;
+                            align-content: center;
+                            align-items: center;
+                        }
+                        
+                        &:last-child {
+                            margin: 0;
+                        }
+
+                        &:hover {
+                            i {
+                                color: $green;
+                                background: $black;
+                            }
+                        }
+                    }
+                    }
+
+                    &:hover {
+                        .type {
+                            z-index: 99;
+                            color: $lightGray;
+
+                            i {
+                                color: $lightGray;
+                            }
+                        }
+
+                        .year {
+                            z-index: 99;
+                            color: $lightGray;
+                        }
+
+                        .prev {
+                            transform-origin: center;
+                            transform: scale(1.06);
+                            transition-duration: 0.4s;
+                        }
+
+                        .overlay {
+                            z-index: 98;
+                            opacity: 0.9;
+                        }
+
+                        .links {
+                            z-index: 99;
+                            opacity: 1;
+                        }
+                    }
+                }
 
                 #projectTwo {
                     height: 100%;
@@ -1940,6 +2347,7 @@ body {
 
                 &:hover {
                     color: $lightGray;
+
                     i {
                         color: $lightGray;
                     }
@@ -2011,7 +2419,8 @@ body {
                 position: relative;
                 background: $blackOpacityMenu;
                 box-shadow: 0px 2px 10px -4px $shadow;
-                height: fit-content;;
+                height: fit-content;
+                ;
                 padding: 12px 15px;
                 cursor: pointer;
 
@@ -2124,13 +2533,13 @@ body {
                 background: $blackOpacityMenu;
                 box-shadow: 0px 2px 10px -4px $shadow;
                 padding: 12px 15px;
-    
+
                 span {
                     font-size: 15px;
                     font-weight: 500;
                     color: $green;
                 }
-    
+
                 i {
                     background: none;
                     position: absolute;
@@ -2138,15 +2547,15 @@ body {
                     right: 15px;
                     opacity: 0;
                 }
-    
+
                 &:hover {
                     background: $black;
                     padding-right: 50px;
-    
+
                     span {
                         color: $lightGray;
                     }
-    
+
                     i {
                         color: $lightGray;
                         opacity: 1;
