--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,113 @@ li {
   text-align: center;
 }
 
+#newDomain {
+  width: 100vw;
+  height: 100vh;
+  padding: 12vh 0 18vh 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#newDomain img {
+  width: 160px;
+}
+
+#newDomain h1 {
+  font-size: 32px;
+  font-weight: 300;
+  color: white;
+}
+
+#newDomain p {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#newDomain p #dots {
+  display: inline-block;
+  padding-left: 3px;
+  width: 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+#newDomain a {
+  font-size: 48px;
+  font-weight: 800;
+  margin-bottom: 10px;
+  color: #8DFFAA;
+  text-decoration: underline;
+}
+
+#newDomain #counter {
+  width: 75px;
+  height: 75px;
+  background: #0C0C0C;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#newDomain #counter #counterValue {
+  font-size: 48px;
+  font-weight: 800;
+}
+
 body {
   width: 100vw;
   background: -webkit-gradient(linear, left top, right bottom, from(#0F0F0F), to(#232323));
